add fn SendData

--- a/index.html
+++ b/index.html
@@ -176,5 +176,37 @@
         </div>
       </main>
     </div>
+    <footer class="bg-secondary text-white py-3 mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h5>Nazwa firmy...</h5>
+            <p class="about">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+              dolor, sint ratione commodi, veniam deleniti velit nostrum
+              voluptas magni eos vero? Repellendus in facilis totam fugit
+              voluptatem libero iste minima.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <form action="">
+              <h5>Kontakt</h5>
+              <input
+                type="email"
+                class="form-control"
+                placeholder="Pojaj swój adres @"
+              />
+              <input type="text" class="my-3 info" />
+              <button class="btn btn-primary">
+                Wyślij
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="second-footer py-4">
+      <p class="text-white m-0">Copyright @ nazwa</p>
+    </div>
   </body>
 </html>
